--- a/views/pdf.ejs
+++ b/views/pdf.ejs
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<h1>pdf <%= pdf.name %></h1>
+	<h1><%= pdf.name %></h1>
+	<p><%= pdf.author %></p>
+	<p><%= pdf.description %></p>
+
 </body>
 </html>
