--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,59 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SharePDF</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Home</h1>
+	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#upload" >Upload</button>
+
+
+
+
+	<!-- Upload-Modal -->
+	<div class="modal fade" id="upload" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLabel">Upload</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	        <form action="/upload" method="post">
+	        	<div class="form-group">
+	        		<label for="exampleInputEmail1">PDF Title</label>
+				    <input type="text" class="form-control" required name="pname" placeholder="Enter Title">
+				</div>
+				<div class="form-group">
+	        		<label for="exampleInputEmail1">Author</label>
+				    <input type="text" class="form-control" required name="pauth" placeholder="Enter Author">
+				</div>
+				<div class="form-group">
+	        		<label for="exampleInputEmail1">Link</label>
+				    <input type="text" class="form-control" name="plink" required placeholder="Enter Link">
+				    <small id="emailHelp" class="form-text text-muted">You can upload your pdf to google drive and copy and paste the link.</small>
+
+				</div>
+				<div class="form-group">
+	        		<label for="exampleInputEmail1">Description</label>
+				    <textarea class="form-control" name="pdesc" rows="3" name="pdesc" required placeholder="Simple description"></textarea>
+				</div>
+	        	
+	        
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="submit" name="upload" class="btn btn-primary">Upload</button>
+	        </form>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
