--- a/views/pdf.ejs
+++ b/views/pdf.ejs
@@ -4,12 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SharePDF</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1><%= pdf.name %></h1>
-	<p><%= pdf.author %></p>
+	<h2><%= pdf.author %></h2>
 	<p><%= pdf.description %></p>
+	<a href="<%= pdf.link %>" class="btn btn-primary" >Download</a>
 
 </body>
 </html>
